--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <h1 class="promo__title">Now Buy Your<br> PIN or<span class="main-text-colored"> Top&nbsp;Up</span><br> With Bank Transfer</h1>
                   <p class="promo__text">We Make international calling simple, relible, and cheap basedon your unique calling behavior.</p><a class="main-btn promo__cta-btn" href="#">Get Started</a>
                 </div>
-                <form class="rt-input-search promo__search-form">
+                <form class="rt-input-search promo__search-form" id="search-form">
                   <button class="rt-input-search__btn-del" type="button">
                     <svg width="16" height="16" aria-hidden="true">
                       <use href="#icon-close-small"></use>
@@ -113,7 +113,7 @@
                       <use href="#icon-search"></use>
                     </svg>
                   </button>
-                  <input class="rt-input rt-input-search__input" type="search" id="id-search" name="id-seacrh" placeholder="Where do you want to call?" required>
+                  <input class="rt-input rt-input-search__input" type="search" id="id-search" name="id-search" maxlength="12" minlength="4" placeholder="Where do you want to call?" required autocomplete="off">
                 </form>
                 <div class="promo__users-wrap users-wrap">
                   <ul class="users-wrap__our-user-list our-user-list">
